--- a/Fix_Missing_Images.ipynb
+++ b/Fix_Missing_Images.ipynb
@@ -19,38 +19,14 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/yasminemasmoudi/P2M/blob/master/Fix_Missing_Images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "S18FVU0fEvbQ",
-        "outputId": "3e17fc51-93f3-4bcf-b82a-dbc2a601ce5e"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
+        "<a href=\"https://colab.research.google.com/github/yasminemasmoudi/P2M-models/blob/master/Fix_Missing_Images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wS85AnyVJ90T",
-        "outputId": "18b359e8-68ea-47e0-9ecd-f263206f44d9",
+        "outputId": "e0176741-9ae4-4f85-fe81-d4192d924978",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -68,7 +44,7 @@
         "headers.update({\n",
         "    'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
         "})\n",
-        "URL = 'https://www.goodreads.com/book'\n",
+        "URL = 'https://www.goodreads.com/book/show/'\n",
         "\n",
         "print(f'Total missing images : {len(nopic_ids)}')\n",
         "no_images = set([389627,42155,4502877,25735012,19469, 3698,207781, 53580, 105703,63432,313620, 78674, 44360 ])\n",
@@ -94,37 +70,356 @@
         "new_nopic_ids = df_books[df_books.image_url.str.contains('nophoto')].book_id.values\n",
         "print(f'Missing images now: {len(new_nopic_ids)}')\n",
         "print(f'Updated {abs(len(new_nopic_ids) - len(nopic_ids))} images')\n",
-        "df_books.to_csv(drive_path + 'to_clean.csv', index = False)"
+        "print()\n",
+        "print('Writing to Drive ...')\n",
+        "df_books.to_csv(drive_path + 'cleaned.csv', index = False)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "Total missing images : 13\n",
+            "Total missing images : 53\n",
             "Missing images now: 13\n",
-            "Updated 0 images\n"
-          ]
+            "Updated 40 images\n",
+            "\n",
+            "Writing to Drive ...\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3K0IBy2Jefl3"
+        "id": "IReR5aDNx6VK"
       },
-      "source": [
-        "cols = ['original_title', 'authors', 'average_rating', 'image_url', 'book_id']"
-      ],
-      "execution_count": 9,
+      "source": [],
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3K0IBy2Jefl3",
+        "outputId": "c6b4ac25-947d-4652-db2a-c8c230eecd9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 448
+        }
+      },
+      "source": [
+        "cols = ['original_title', 'authors', 'average_rating', 'image_url', 'book_id']\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <th>Unnamed: 0.1</th>\n",
+              "      <th>Unnamed: 0.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>Unnamed: 0.1.1.1.1.1.1.1.1.1.1.1.1.1.1.1.1</th>\n",
+              "      <th>r_index</th>\n",
+              "      <th>book_id</th>\n",
+              "      <th>best_book_id</th>\n",
+              "      <th>work_id</th>\n",
+              "      <th>books_count</th>\n",
+              "      <th>isbn</th>\n",
+              "      <th>isbn13</th>\n",
+              "      <th>authors</th>\n",
+              "      <th>original_publication_year</th>\n",
+              "      <th>original_title</th>\n",
+              "      <th>title</th>\n",
+              "      <th>language_code</th>\n",
+              "      <th>average_rating</th>\n",
+              "      <th>ratings_count</th>\n",
+              "      <th>work_ratings_count</th>\n",
+              "      <th>work_text_reviews_count</th>\n",
+              "      <th>ratings_1</th>\n",
+              "      <th>ratings_2</th>\n",
+              "      <th>ratings_3</th>\n",
+              "      <th>ratings_4</th>\n",
+              "      <th>ratings_5</th>\n",
+              "      <th>image_url</th>\n",
+              "      <th>small_image_url</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2767052</td>\n",
+              "      <td>2767052</td>\n",
+              "      <td>2792775</td>\n",
+              "      <td>272</td>\n",
+              "      <td>439023483</td>\n",
+              "      <td>9.780439e+12</td>\n",
+              "      <td>Suzanne Collins</td>\n",
+              "      <td>2008.0</td>\n",
+              "      <td>The Hunger Games</td>\n",
+              "      <td>The Hunger Games (The Hunger Games, #1)</td>\n",
+              "      <td>eng</td>\n",
+              "      <td>4.34</td>\n",
+              "      <td>4780653</td>\n",
+              "      <td>4942365</td>\n",
+              "      <td>155254</td>\n",
+              "      <td>66715</td>\n",
+              "      <td>127936</td>\n",
+              "      <td>560092</td>\n",
+              "      <td>1481305</td>\n",
+              "      <td>2706317</td>\n",
+              "      <td>https://images.gr-assets.com/books/1447303603m...</td>\n",
+              "      <td>https://images.gr-assets.com/books/1447303603s...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4640799</td>\n",
+              "      <td>491</td>\n",
+              "      <td>439554934</td>\n",
+              "      <td>9.780440e+12</td>\n",
+              "      <td>J.K. Rowling, Mary GrandPré</td>\n",
+              "      <td>1997.0</td>\n",
+              "      <td>Harry Potter and the Philosopher's Stone</td>\n",
+              "      <td>Harry Potter and the Sorcerer's Stone (Harry P...</td>\n",
+              "      <td>eng</td>\n",
+              "      <td>4.44</td>\n",
+              "      <td>4602479</td>\n",
+              "      <td>4800065</td>\n",
+              "      <td>75867</td>\n",
+              "      <td>75504</td>\n",
+              "      <td>101676</td>\n",
+              "      <td>455024</td>\n",
+              "      <td>1156318</td>\n",
+              "      <td>3011543</td>\n",
+              "      <td>https://images.gr-assets.com/books/1474154022m...</td>\n",
+              "      <td>https://images.gr-assets.com/books/1474154022s...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>41865</td>\n",
+              "      <td>41865</td>\n",
+              "      <td>3212258</td>\n",
+              "      <td>226</td>\n",
+              "      <td>316015849</td>\n",
+              "      <td>9.780316e+12</td>\n",
+              "      <td>Stephenie Meyer</td>\n",
+              "      <td>2005.0</td>\n",
+              "      <td>Twilight</td>\n",
+              "      <td>Twilight (Twilight, #1)</td>\n",
+              "      <td>en-US</td>\n",
+              "      <td>3.57</td>\n",
+              "      <td>3866839</td>\n",
+              "      <td>3916824</td>\n",
+              "      <td>95009</td>\n",
+              "      <td>456191</td>\n",
+              "      <td>436802</td>\n",
+              "      <td>793319</td>\n",
+              "      <td>875073</td>\n",
+              "      <td>1355439</td>\n",
+              "      <td>https://images.gr-assets.com/books/1361039443m...</td>\n",
+              "      <td>https://images.gr-assets.com/books/1361039443s...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2657</td>\n",
+              "      <td>2657</td>\n",
+              "      <td>3275794</td>\n",
+              "      <td>487</td>\n",
+              "      <td>61120081</td>\n",
+              "      <td>9.780061e+12</td>\n",
+              "      <td>Harper Lee</td>\n",
+              "      <td>1960.0</td>\n",
+              "      <td>To Kill a Mockingbird</td>\n",
+              "      <td>To Kill a Mockingbird</td>\n",
+              "      <td>eng</td>\n",
+              "      <td>4.25</td>\n",
+              "      <td>3198671</td>\n",
+              "      <td>3340896</td>\n",
+              "      <td>72586</td>\n",
+              "      <td>60427</td>\n",
+              "      <td>117415</td>\n",
+              "      <td>446835</td>\n",
+              "      <td>1001952</td>\n",
+              "      <td>1714267</td>\n",
+              "      <td>https://images.gr-assets.com/books/1361975680m...</td>\n",
+              "      <td>https://images.gr-assets.com/books/1361975680s...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>5</td>\n",
+              "      <td>4671</td>\n",
+              "      <td>4671</td>\n",
+              "      <td>245494</td>\n",
+              "      <td>1356</td>\n",
+              "      <td>743273567</td>\n",
+              "      <td>9.780743e+12</td>\n",
+              "      <td>F. Scott Fitzgerald</td>\n",
+              "      <td>1925.0</td>\n",
+              "      <td>The Great Gatsby</td>\n",
+              "      <td>The Great Gatsby</td>\n",
+              "      <td>eng</td>\n",
+              "      <td>3.89</td>\n",
+              "      <td>2683664</td>\n",
+              "      <td>2773745</td>\n",
+              "      <td>51992</td>\n",
+              "      <td>86236</td>\n",
+              "      <td>197621</td>\n",
+              "      <td>606158</td>\n",
+              "      <td>936012</td>\n",
+              "      <td>947718</td>\n",
+              "      <td>https://images.gr-assets.com/books/1490528560m...</td>\n",
+              "      <td>https://images.gr-assets.com/books/1490528560s...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Unnamed: 0  ...                                    small_image_url\n",
+              "0           0  ...  https://images.gr-assets.com/books/1447303603s...\n",
+              "1           1  ...  https://images.gr-assets.com/books/1474154022s...\n",
+              "2           2  ...  https://images.gr-assets.com/books/1361039443s...\n",
+              "3           3  ...  https://images.gr-assets.com/books/1361975680s...\n",
+              "4           4  ...  https://images.gr-assets.com/books/1490528560s...\n",
+              "\n",
+              "[5 rows x 40 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "D7eBfICvt-zn",
-        "outputId": "b7222524-a0a0-4879-bfc9-76457d9c7166",
+        "outputId": "9376ba5a-00d5-4ee7-f90c-a02700c5bb05",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -134,11 +429,10 @@
         "df = df_books[cols].copy()\n",
         "df.info()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 9274 entries, 0 to 9273\n",
@@ -170,7 +464,8 @@
             " 22  small_image_url            9274 non-null   object \n",
             "dtypes: float64(3), int64(13), object(7)\n",
             "memory usage: 1.6+ MB\n"
-          ]
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -182,7 +477,7 @@
       "source": [
         "df.to_csv('full_books.csv', index = False)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +488,7 @@
       "source": [
         "df.to_csv(drive_path + 'full_books.csv', index = False)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,15 +501,6 @@
         "df = df[cols]\n",
         "df.to_csv('books.csv', index = False)"
       ],
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "4t9avGYdFYM2"
-      },
       "execution_count": null,
       "outputs": []
     }
